kqed_dev4/src/objects/Bequest__c.object
<CustomObject>
    <description>This is a template for planned giving which is also referred to as a Bequest.  Planned giving takes the form of donations from life insurance, stock, dividends, wills, sales of items i.e. car, boats after someone has departed.</description>
    <fields>
        <fullName>Additional_Gifts__c</fullName>
        <label>Additional Gifts</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_Percentage_of_Trust__c</fullName>
        <label>Anticipated Percentage of Trust</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Anticipated_gift_amount__c</fullName>
        <description>Anticipated/Expected Amount</description>
        <inlineHelpText>Expected Amount</inlineHelpText>
        <label>Anticipated Gift Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appraisal_Date__c</fullName>
        <inlineHelpText>Date the appraisal was conducted</inlineHelpText>
        <label>Appraisal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Value__c</fullName>
        <inlineHelpText>Value of the appraised item</inlineHelpText>
        <label>Appraisal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bequest_Terms__c</fullName>
        <description>Bequest Terms</description>
        <label>Bequest Terms</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bequest_Type__c</fullName>
        <label>Bequest Type</label>
        <picklist>
            <picklistValues>
                <fullName>Intention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realized</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_Day__c</fullName>
        <inlineHelpText>Day of Birth DD, copied from the contact detail screen, please edit the detail on the contact screen and leave this screen blank.</inlineHelpText>
        <label>Birth Day</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Planned Giving (Birth Day)</relationshipLabel>
        <relationshipName>Planned_Giving2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Birth_Month__c</fullName>
        <inlineHelpText>Month of birth MM copied from the contact detail screen, please edit the detail on the contact screen and leave this screen blank.</inlineHelpText>
        <label>Birth Month</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Planned Giving (Birth Month)</relationshipLabel>
        <relationshipName>Planned_Giving3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Birth_Year__c</fullName>
        <inlineHelpText>Year of birth copied from the contact detail screen, please edit the detail on the contact screen and leave this screen blank.</inlineHelpText>
        <label>Birth Year</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Planned Giving (Birth Year)</relationshipLabel>
        <relationshipName>Planned_Giving4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Planned Giving</relationshipLabel>
        <relationshipName>Planned_Giving</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Surrender_Value__c</fullName>
        <description>The current Cash Surrender Value of the Life Insurance Policy</description>
        <label>Cash Surrender Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charitable_Deduction__c</fullName>
        <label>Charitable Deduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Sever_Date__c</fullName>
        <label>Close/Sever Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Trustee_Name__c</fullName>
        <inlineHelpText>Name of the Co-Trustee if one exists, you should add a new contact to an organization and add a new contact role on the opportunity with this person&apos;s name</inlineHelpText>
        <label>Co-Trustee Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Roles__c</fullName>
        <label>Contact Roles</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Planned Giving</relationshipLabel>
        <relationshipName>Planned_Giving_Contact1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <inlineHelpText>Date contract signed</inlineHelpText>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count_Of_Donor_Bene_A__c</fullName>
        <label>Count of Donor Bene A</label>
        <summaryFilterItems>
            <field>Contact_Role__c.Role__c</field>
            <operation>equals</operation>
            <value>Donor Bene A</value>
        </summaryFilterItems>
        <summaryForeignKey>Contact_Role__c.Planned_Giving__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Of_Donor_Bene_I__c</fullName>
        <label>Count of Donor Bene I</label>
        <summaryFilterItems>
            <field>Contact_Role__c.Role__c</field>
            <operation>equals</operation>
            <value>Donor Bene I</value>
        </summaryFilterItems>
        <summaryForeignKey>Contact_Role__c.Planned_Giving__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Bene_A__c</fullName>
        <label>Count of Bene A</label>
        <summaryFilterItems>
            <field>Contact_Role__c.Role__c</field>
            <operation>equals</operation>
            <value>Bene A</value>
        </summaryFilterItems>
        <summaryForeignKey>Contact_Role__c.Planned_Giving__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Bene_I__c</fullName>
        <label>Count of Bene I</label>
        <summaryFilterItems>
            <field>Contact_Role__c.Role__c</field>
            <operation>equals</operation>
            <value>Bene I</value>
        </summaryFilterItems>
        <summaryForeignKey>Contact_Role__c.Planned_Giving__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Station_Notified__c</fullName>
        <inlineHelpText>Enter the date the station was notified of the planned gift</inlineHelpText>
        <label>Date Station Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Death__c</fullName>
        <formula>Donor__r.deceased_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Death</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrestricted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Date_Year__c</fullName>
        <inlineHelpText>Year of the Discount  YYYY</inlineHelpText>
        <label>Discount Date Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Rate_Date__c</fullName>
        <label>Discount Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Rate_Month__c</fullName>
        <label>Discount Rate Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Rate_Year__c</fullName>
        <label>Discount Rate Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_rate__c</fullName>
        <description>Discount Rate</description>
        <label>Discount Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Donor__c</fullName>
        <label>Donor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Planned Giving</relationshipLabel>
        <relationshipName>Planned_Giving_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Useful_Life_of_Buildings__c</fullName>
        <inlineHelpText>Number of years of life in the buildings</inlineHelpText>
        <label>Estimated Useful Life of Building (s)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Date__c</fullName>
        <inlineHelpText>Date you expect the CLUT, CLAT, CRAT, CRUT</inlineHelpText>
        <label>Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Manager__c</fullName>
        <label>External Manager</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Managing_Organization__c</fullName>
        <label>External Managing Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Planned Giving (External Managing Organization)</relationshipLabel>
        <relationshipName>Planned_Giving1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Date__c</fullName>
        <inlineHelpText>Date of the CLUT, CLAT, CRAT, CRUT</inlineHelpText>
        <label>Fair Market Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>$$ of the value of the item</inlineHelpText>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Distribution_Amount__c</fullName>
        <label>Final Distribution Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <description>Fund Start Date = First Payment Date per Kathleen McCarthy</description>
        <inlineHelpText>Fund Start Date = First Payment Date</inlineHelpText>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Lookup__c</fullName>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Planned Giving</relationshipLabel>
        <relationshipName>Planned_Giving</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Date__c</fullName>
        <description>Gift date for Charitable Gift</description>
        <inlineHelpText>Gift date for Charitable Gift</inlineHelpText>
        <label>Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Subtype__c</fullName>
        <label>Gift Subtype</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flip with Makeup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Income with Makeup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Grantor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_amount__c</fullName>
        <description>Received Gift Amount</description>
        <inlineHelpText>Received Gift Amount</inlineHelpText>
        <label>Gift Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Giving_Payment_Frequency__c</fullName>
        <inlineHelpText>Payment Frequency</inlineHelpText>
        <label>Giving Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Planned Giving (Household)</relationshipLabel>
        <relationshipName>Planned_Giving</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Gift_Amount__c</fullName>
        <label>Initial Gift Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Annual_Premium__c</fullName>
        <description>Annual Premium of the Life Insurance</description>
        <inlineHelpText>Annual Premium of the Life Insurance</inlineHelpText>
        <label>Life Insurance Annual Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Policy_Name__c</fullName>
        <description>Policy name on the life insurance</description>
        <inlineHelpText>Policy name on the life insurance</inlineHelpText>
        <label>Life Insurance Policy Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Premium_Due_Date__c</fullName>
        <description>Life Insurance Premium Due Date</description>
        <inlineHelpText>Due Date of the Life Insurance Payment</inlineHelpText>
        <label>Life Insurance Premium Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Premium_Pmt_Address__c</fullName>
        <description>Life Insurance Premium Pmt Address</description>
        <inlineHelpText>Address for the Life Insurance Premium Payment</inlineHelpText>
        <label>Life Insurance Premium Pmt Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Provider_Address__c</fullName>
        <description>Address of the Life Insurance Provider</description>
        <inlineHelpText>Address of the Life Insurance Provider, in some cases this could be the station and the policy holder may pay the station instead of the life insurance company</inlineHelpText>
        <label>Life Insurance Provider Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Provider__c</fullName>
        <label>Life Insurance Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Planned Giving (Life Insurance Provider)</relationshipLabel>
        <relationshipName>Planned_Giving2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Managed__c</fullName>
        <label>Managed</label>
        <picklist>
            <picklistValues>
                <fullName>Inside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Value_Date__c</fullName>
        <label>Market Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Value__c</fullName>
        <label>Market Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <inlineHelpText>This is the pledge which associates the planned gift to the household.</inlineHelpText>
        <label>Planned Gift Pledge</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Planned Giving (Planned Gift Pledge)</relationshipLabel>
        <relationshipName>Planned_Giving1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordinary_Income__c</fullName>
        <label>Ordinary Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Planned Giving</relationshipLabel>
        <relationshipName>Bequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIF_Total_Units__c</fullName>
        <inlineHelpText>PIF Units</inlineHelpText>
        <label>PIF Total Units</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payout_Rate__c</fullName>
        <description>Payout Rate</description>
        <label>Payout Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Estate__c</fullName>
        <description>Percentage of Estate Anticipated</description>
        <inlineHelpText>Anticipated Percentage of Estate %</inlineHelpText>
        <label>Percentage of Estate %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planned_Giving_Asset__c</fullName>
        <label>Planned Giving Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Planned Giving</relationshipLabel>
        <relationshipName>Planned_Giving</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Giving_Opportunity_Detail__c</fullName>
        <description>All planned gifts are related to a giving opportunity, if you create a new one you will be able to link it to  bequest, life insurance policy, retirement plan, charitable gift annuity, etc.</description>
        <inlineHelpText>All planned gifts are related to a giving opportunity, if you create a new giving opportunity you will need to link it to a bequest, life insurance policy, retirement plan, charitable gift annuity, etc.</inlineHelpText>
        <label>Giving Name (Opportunity)</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Planned Giving</relationshipLabel>
        <relationshipName>Planned_Giving</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Principle_amount__c</fullName>
        <description>Principle Amount</description>
        <inlineHelpText>Principle Amount for the station</inlineHelpText>
        <label>Station Principle Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remainder_Amount__c</fullName>
        <label>Remainder Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salvage_Value_of_Buildings__c</fullName>
        <inlineHelpText>Value of the Building or Buildings in $$</inlineHelpText>
        <label>Salvage Value of Building (s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <formula>Campaign__r.Source_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_Total_Gift_Amount__c</fullName>
        <label>Station Total Gift Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <inlineHelpText>Station selected for planned gift</inlineHelpText>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Station_percent__c</fullName>
        <inlineHelpText>Station Percentage</inlineHelpText>
        <label>Station Percent</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate in Probate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Severed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TaBequests_Id__c</fullName>
        <description>TA Bequests external Id</description>
        <externalId>true</externalId>
        <label>TA Bequests Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TaTransactions_Id__c</fullName>
        <description>TA Transactions</description>
        <label>TA Transactions Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Free_Income__c</fullName>
        <label>Tax Free Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Type__c</fullName>
        <label>Term Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lives only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed term only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longer of term or lives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shorter of term or lives</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Estate__c</fullName>
        <label>Total Estate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_Property__c</fullName>
        <inlineHelpText>Total value of the property for Life Estate</inlineHelpText>
        <label>Total Value of Property</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trust_ID__c</fullName>
        <label>Trust ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Name__c</fullName>
        <inlineHelpText>Name of the Trustee</inlineHelpText>
        <label>Trustee Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bequest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Gift Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Lead Annuity Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Lead Unitrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Rem. Annuity Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Rem. Unitrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred Gift Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooled Income Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement Plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_of_Buildings__c</fullName>
        <inlineHelpText>$ value of the buildings in the Life Estate,value feeds into the total value of property field</inlineHelpText>
        <label>Value of Building (s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WGBH_Percentage__c</fullName>
        <inlineHelpText>KCRW Percentage</inlineHelpText>
        <label>KCRW Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>acquisition_date__c</fullName>
        <description>Acquisition Date</description>
        <inlineHelpText>Acquisition Date</inlineHelpText>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>activity_type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>All Cumulative Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Cumulative Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Annual Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Auction Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Capital Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Foundation Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH In-Kind Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Major Gifts Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Matching Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Planned Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Realty Perks Donations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Cumulative Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Annual Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Auction Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Capital Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Corporate/Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Major Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Matching Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Planned Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Volunteers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI Cumulative Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI Annual Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI In-Kind Gifts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>activity_type_value__c</fullName>
        <description>Activity Type Valu</description>
        <inlineHelpText>Activity Type Valu</inlineHelpText>
        <label>Activity Type Value</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actual_remainder_date__c</fullName>
        <description>Actual Remainder Date</description>
        <inlineHelpText>Actual Remainder Date</inlineHelpText>
        <label>Actual Remainder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>actual_remainder_value__c</fullName>
        <description>Actual Remainder Value</description>
        <inlineHelpText>Actual Remainder Value</inlineHelpText>
        <label>Actual Remainder Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>annual_payment__c</fullName>
        <description>Annual Payment</description>
        <inlineHelpText>Annual Payment</inlineHelpText>
        <label>Annual Payment</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>anonymous_code__c</fullName>
        <description>Anonymous Code</description>
        <inlineHelpText>Anonymous Code</inlineHelpText>
        <label>Anonymous Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bank_name__c</fullName>
        <description>Bank Name</description>
        <inlineHelpText>Bank Name</inlineHelpText>
        <label>Bank Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bequest_confirmed_date__c</fullName>
        <description>Bequest Confirmed Date</description>
        <inlineHelpText>Bequest Confirmed Date</inlineHelpText>
        <label>Bequest Confirmed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>bequest_confirmed_flag__c</fullName>
        <description>Bequest Confirmed Flag</description>
        <inlineHelpText>Bequest Confirmed Flag</inlineHelpText>
        <label>Bequest Confirmed Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
</CustomObject>